--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.2",
   "description": "A vanilla JS customisable text input/select box plugin",
   "main": "./src/scripts/dist/choices.min.js",
-  "types": "./index.d.ts",
+  "types": "./types/index.d.ts",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint assets/**/*.js",
