--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,5 @@ before_install:
 install:
   - npm install
 script:
-  - npm run test:unit
+  - npm run test
   - npm run coverage
-  - npm run test:e2e
