--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "coverage": "nyc npm run test:unit",
     "cypress:run": "$(npm bin)/cypress run",
     "cypress:open": "$(npm bin)/cypress open",
-    "bundlesize": "bundlesize",
+    "test": "run-p test:size test:unit test:e2e",
+    "test:size": "bundlesize",
     "test:unit": "mocha --require ./config/jsdom.js --compilers js:babel-core/register \"./src/**/**/**/**/*.test.js\" --exit",
     "test:unit:watch": "npm run test:unit -- --watch --inspect=5556",
     "test:e2e": "run-p --race start cypress:run",
-    "test": "run-p bundlesize test:unit test:e2e",
     "js:watch": "NODE_ENV=development node server.js",
     "js:build:minimised": "webpack --env.minimize --config webpack.config.prod.js",
     "js:build:unminimised": "webpack --config webpack.config.prod.js",
