Run bundlesize as after script

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "npm run js:build && npm run css:build",
     "lint": "eslint assets/**/*.js",
     "coverage": "nyc npm run test:unit",
+    "bundlesize": "bundlesize",
     "cypress:run": "$(npm bin)/cypress run",
     "cypress:open": "$(npm bin)/cypress open",
     "test": "run-p test:size test:unit test:e2e",
-    "test:size": "bundlesize",
     "test:unit": "mocha --require ./config/jsdom.js --compilers js:babel-core/register \"./src/**/**/**/**/*.test.js\" --exit",
     "test:unit:watch": "npm run test:unit -- --watch --inspect=5556",
     "test:e2e": "run-p --race start cypress:run",
