--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,9 @@
     "@babel/preset-env"
   ],
   "plugins": [
-    "@babel/plugin-transform-modules-commonjs"
+    "@babel/plugin-transform-modules-commonjs",
+    ["@babel/plugin-transform-spread", {
+      "loose": true
+    }]
   ]
 }
