--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cypress:run": "$(npm bin)/cypress run",
     "cypress:open": "$(npm bin)/cypress open",
     "test": "run-p test:unit test:e2e",
-    "test:unit": "mocha --require ./config/jsdom.js --compilers js:@babel/register \"./src/**/**/**/**/*.test.js\" --exit",
+    "test:unit": "mocha --require ./config/jsdom.js --require @babel/register $(find src -name '*.test.js') --exit",
     "test:unit:watch": "npm run test:unit -- --watch --inspect=5556",
     "test:e2e": "run-p --race start cypress:run",
     "js:watch": "NODE_ENV=development node server.js",
@@ -56,6 +56,7 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
     "autoprefixer": "^6.3.3",
@@ -77,7 +78,7 @@
     "express": "^4.16.4",
     "husky": "^0.14.3",
     "jsdom": "^11.12.0",
-    "mocha": "^3.4.2",
+    "mocha": "^5.2.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
