--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bump-cache": "node bump-cache.js --current $npm_package_version",
     "deploy": "git subtree push --prefix public origin gh-pages",
     "postversion": "npm run js:build && npm run bump-cache",
-    "prepush": "run-p lint test:unit bundlesize"
+    "prepush": "run-p lint test:unit && npm run bundlesize"
   },
   "repository": {
     "type": "git",
