--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
       script: npm run build && npm run bump-cache
 
     - stage: Publishing to NPM
+      if: branch = master
       script: echo "Publishing to NPM..."
       deploy:
         provider: npm
@@ -21,15 +22,14 @@ jobs:
         api_key: $NPM_API_KEY
         skip_cleanup: true
         on:
-          branch: master
           tags: true
 
     - stage: Publishing to GitHub releases
+      if: branch = master
       script: echo "Publishing to Github releases..."
       deploy:
         provider: releases
         api_key: $GITHUB_OAUTH_TOKEN
         skip_cleanup: true
         on:
-          branch: master
           tags: true
