--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
     "no-plusplus": "off",
     "no-unused-expressions": "off",
     "no-underscore-dangle": "off",
+    "consistent-return": "off",
     "prettier/prettier": [
       "error",
       {
