--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,25 @@
 language: node_js
+
 node_js:
   - 10
+
+addons:
+  apt:
+    packages:
+      # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
+      - libgconf-2-4
+
 cache:
+  # Caches $HOME/.npm when npm ci is default script command
+  # Caches node_modules in all other cases
+  npm: true
   directories:
-    - ~/.npm
+    # we also need to cache folder with Cypress binary
     - ~/.cache
+
 install:
   - npm ci
+
 jobs:
   include:
     - stage: Judging bundle size
