--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "run-p js:watch css:watch",
     "build": "npm run js:build && npm run css:build",
     "lint": "eslint $(find src -name '*.js')",
-    "coverage": "nyc --reporter=lcov --reporter=text --reporter=text-summary npm run test:unit",
+    "coverage": "nyc --reporter=lcov --reporter=text --reporter=text-summary mocha",
     "bundlesize": "bundlesize",
     "cypress:run": "$(npm bin)/cypress run",
     "cypress:open": "$(npm bin)/cypress open",
     "test": "npm run test:unit && npm run test:e2e",
-    "test:unit": "mocha --require ./config/jsdom.js --require @babel/register $(find src -name '*.test.js') --exit",
-    "test:unit:watch": "npm run test:unit -- --watch --inspect=5556",
+    "test:unit": "mocha",
+    "test:unit:watch": "mocha --watch --inspect=5556",
     "test:e2e": "run-p --race start cypress:run",
     "js:watch": "NODE_ENV=development node server.js",
     "js:build": "webpack --config webpack.config.prod.js",
@@ -77,16 +77,16 @@
     "eslint-plugin-react": "^7.12.4",
     "express": "^4.16.4",
     "husky": "^0.14.3",
-    "jsdom": "^11.12.0",
-    "mocha": "^5.2.0",
+    "jsdom": "^15.2.0",
+    "mocha": "^6.2.2",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
-    "nyc": "^11.9.0",
+    "nyc": "^14.1.1",
     "opn": "^5.4.0",
     "postcss-cli": "^2.5.1",
     "prettier": "^1.16.4",
-    "sinon": "^2.4.0",
+    "sinon": "^7.5.0",
     "unminified-webpack-plugin": "^2.0.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
