--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "run-p js:watch css:watch",
     "build": "npm run js:build && npm run css:build",
-    "lint": "eslint $(find src -name '*.js')",
+    "lint": "eslint src/scripts",
     "coverage": "nyc --reporter=lcov --reporter=text --reporter=text-summary mocha",
     "bundlesize": "bundlesize",
     "cypress:run": "$(npm bin)/cypress run",
@@ -60,21 +60,18 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
     "autoprefixer": "^6.3.3",
-    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.5",
     "bundlesize": "^0.17.1",
     "chai": "^4.2.0",
     "csso": "^1.8.2",
     "cypress": "^3.1.5",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.10.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-cypress": "^2.2.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-cypress": "^2.7.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "express": "^4.16.4",
     "husky": "^0.14.3",
     "jsdom": "^15.2.0",
