--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "css:min": "csso public/assets/styles/base.css public/assets/styles/base.min.css && csso public/assets/styles/choices.css public/assets/styles/choices.min.css",
     "bump-cache": "node bump-cache.js --current $npm_package_version",
     "deploy": "git subtree push --prefix public origin gh-pages",
-    "postversion": "git push --follow-tags",
     "prepush": "run-p lint test:unit && npm run bundlesize",
+    "preversion": "npm test",
+    "postversion": "git push --atomic",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -39,6 +40,7 @@
     "public/assets/scripts",
     "public/assets/styles",
     "src",
+    "!src/**/*.test.js",
     "types"
   ],
   "bugs": {
