--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "css:watch": "nodemon -e scss -x \"npm run css:build\"",
     "css:build": "run-p css:sass css:prefix css:min",
     "css:sass": "node-sass --output-style expanded --include-path  scss src/styles/base.scss public/assets/styles/base.css && node-sass --output-style expanded --include-path scss src/styles/choices.scss public/assets/styles/choices.css",
-    "css:prefix": "postcss --use autoprefixer -b 'last 2 versions' public/assets/styles/*.css -d public/assets/styles",
+    "css:prefix": "postcss  public/assets/styles/*.css --use autoprefixer --env prod --dir public/assets/styles",
     "css:min": "csso public/assets/styles/base.css public/assets/styles/base.min.css && csso public/assets/styles/choices.css public/assets/styles/choices.min.css",
     "deploy": "git subtree push --prefix public origin gh-pages",
     "prepush": "run-p lint test:unit && npm run bundlesize",
@@ -61,7 +61,7 @@
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/register": "^7.0.0",
-    "autoprefixer": "^6.3.3",
+    "autoprefixer": "^9.6.5",
     "babel-loader": "^8.0.5",
     "bundlesize": "^0.18.0",
     "chai": "^4.2.0",
