--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -31,6 +31,7 @@ jobs:
           CI_COMMIT_SHA: ${{ github.sha }}
           GIT_COMMIT: ${{ github.sha }}
           CI_BRANCH: ${{ github.head_ref }}
+          BUNDLESIZE_GITHUB_TOKEN: ${{secrets.BUNDLESIZE_GITHUB_TOKEN}}
           FORCE_COLOR: 2
           HUSKY_SKIP_INSTALL: true
 
