--- a/.github/workflows/bundlesize.yml
+++ b/.github/workflows/bundlesize.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - 'src/scripts/**'
       - 'src/styles/**'
-      - package-lock.json
+      - 'package-lock.json'
+      - '.browserslistrc'
 
 jobs:
   measure:
