--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm ci
 
       - name: run Cypress
-        run: npm run test:e2e -- --record --ci-build-id ${{ github.event.after }}
+        run: npx run-p --race start cypress:ci
         env:
           CI: true
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
