--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -15,8 +15,10 @@ jobs:
         with:
           node-version: 10
 
-      - name: Build library
+      - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY_SKIP_INSTALL: true
 
       - name: run Cypress
         run: npx run-p --race start cypress:ci
