upgrade csso dependency to make it trim sourcemaps

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "css:watch": "nodemon -e scss -x \"npm run css:build\"",
     "css:build": "run-p css:sass css:prefix css:min",
     "css:sass": "node-sass --output-style expanded --include-path  scss src/styles/base.scss public/assets/styles/base.css && node-sass --output-style expanded --include-path scss src/styles/choices.scss public/assets/styles/choices.css",
-    "css:prefix": "postcss public/assets/styles/*.css --use autoprefixer --env prod --dir public/assets/styles",
-    "css:min": "csso public/assets/styles/base.css public/assets/styles/base.min.css && csso public/assets/styles/choices.css public/assets/styles/choices.min.css",
+    "css:prefix": "postcss --verbose public/assets/styles/*.css --env=production --use autoprefixer --dir public/assets/styles",
+    "css:min": "csso public/assets/styles/base.css --output public/assets/styles/base.min.css && csso public/assets/styles/choices.css --output public/assets/styles/choices.min.css",
     "deploy": "git subtree push --prefix public origin gh-pages",
     "prepush": "run-p lint test:unit && npm run bundlesize",
     "preversion": "npm test",
@@ -66,7 +66,7 @@
     "babel-loader": "^8.0.5",
     "bundlesize": "^0.18.0",
     "chai": "^4.2.0",
-    "csso": "^1.8.2",
+    "csso-cli": "2.0.2",
     "cypress": "3.2.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
