--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
   "types": "./types/index.d.ts",
   "scripts": {
     "start": "run-p js:watch css:watch",
-    "build": "npm run js:build && npm run css:build",
+    "build": "run-p js:build css:build",
     "lint": "eslint src/scripts",
     "coverage": "nyc --reporter=lcov --reporter=text --reporter=text-summary mocha",
     "bundlesize": "bundlesize",
     "cypress:run": "$(npm bin)/cypress run",
     "cypress:open": "$(npm bin)/cypress open",
     "cypress:ci": "cypress run --record --group --ci-build-id $GITHUB_SHA",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "run-s test:unit test:e2e",
     "test:unit": "mocha",
     "test:unit:watch": "mocha --watch --inspect=5556",
     "test:e2e": "run-p --race start cypress:run",
     "js:watch": "NODE_ENV=development node server.js",
     "js:build": "webpack --config webpack.config.prod.js",
     "css:watch": "nodemon -e scss -x \"npm run css:build\"",
-    "css:build": "run-p css:sass css:prefix css:min",
-    "css:sass": "node-sass --output-style expanded --include-path  scss src/styles/base.scss public/assets/styles/base.css && node-sass --output-style expanded --include-path scss src/styles/choices.scss public/assets/styles/choices.css",
+    "css:build": "run-s css:sass css:prefix css:min",
+    "css:sass": "node-sass --output-style expanded --include-path scss src/styles/base.scss public/assets/styles/base.css && node-sass --output-style expanded --include-path scss src/styles/choices.scss public/assets/styles/choices.css",
     "css:prefix": "postcss --verbose public/assets/styles/*.css --env=production --use autoprefixer --dir public/assets/styles",
     "css:min": "csso public/assets/styles/base.css --output public/assets/styles/base.min.css && csso public/assets/styles/choices.css --output public/assets/styles/choices.min.css",
     "deploy": "git subtree push --prefix public origin gh-pages",
-    "prepush": "run-p lint test:unit && npm run bundlesize",
+    "prepush": "run-s lint test:unit bundlesize",
     "preversion": "npm test",
     "postversion": "git push --no-verify --atomic",
     "prepublishOnly": "npm run build"
