--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-  "presets": [
-    "@babel/preset-env"
-  ],
-  "plugins": [
-    "@babel/plugin-transform-modules-commonjs",
-    ["@babel/plugin-transform-spread", {
-      "loose": true
-    }]
-  ]
+  "presets": [["@babel/preset-env", { "loose": true }]]
 }
