--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -72,6 +72,10 @@ jobs:
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
+      - run: echo ${{ github.sha }} > RELEASE.txt
+      - run: cat Release.txt
       - uses: softprops/action-gh-release@v1
+        with:
+          files: RELEASE.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
