--- a/.github/workflows/bundlesize.yml
+++ b/.github/workflows/bundlesize.yml
@@ -20,15 +20,13 @@ jobs:
         with:
           node-version: 10
 
-      # - name: Install dependencies and build
-      #   run: |
-      #           npm ci
-      #           # remove commited assets
-      #           rm -rf public/assets
-      #           npm run build
-      #   env:
-      #     CYPRESS_INSTALL_BINARY: 0
-      #     HUSKY_SKIP_INSTALL: true
+      - name: Install dependencies and build
+        run: |
+                npm ci
+                npm run build
+        env:
+          CYPRESS_INSTALL_BINARY: 0
+          HUSKY_SKIP_INSTALL: true
 
       # we don't need to build here, as even minized assets expected to be commited
 
