--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,8 +8,7 @@ on:
       - '.browserslistrc'
 
 jobs:
-  eslint:
-    name: ESLint
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
