--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "babel-loader": "^8.0.6",
     "bundlesize": "^0.18.0",
     "chai": "^4.2.0",
-    "csso-cli": "2.0.2",
+    "csso-cli": "^3.0.0",
     "cypress": "3.2.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
