--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "deepmerge": "^4.2.0",
-    "fuse.js": "3.4.2",
+    "fuse.js": "^3.4.5",
     "redux": "^4.0.4"
   },
   "npmName": "choices.js",
