Re-add PR number to code cov command

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -34,6 +34,7 @@ jobs:
           -f ./coverage/lcov.info
           -B ${{ github.head_ref }}
           -C ${{ github.sha }}
+          -P ${{ github.event.number }}
           -Z || echo 'Codecov upload failed'
         env:
           CI: true
