--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "css:prefix": "postcss public/assets/styles/*.css --use autoprefixer --no-map --env prod --dir public/assets/styles",
     "css:min": "csso public/assets/styles/base.css --output public/assets/styles/base.min.css && csso public/assets/styles/choices.css --output public/assets/styles/choices.min.css",
     "deploy": "git subtree push --prefix public origin gh-pages",
-    "prepush": "run-s lint test:unit bundlesize",
     "postversion": "git push --no-verify --atomic --follow-tags",
     "prepublishOnly": "npm run build"
   },
@@ -74,13 +73,14 @@
     "express": "^4.16.4",
     "husky": "^3.0.9",
     "jsdom": "^15.2.0",
+    "lint-staged": "^9.4.2",
     "mocha": "^6.2.2",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "postcss-cli": "^6.1.3",
-    "prettier": "^1.16.4",
+    "prettier": "^1.18.2",
     "sinon": "^7.5.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
