separate prettier config into external file

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "parserOptions": {
     "ecmaVersion": 2020
   },
-  "extends": ["airbnb-base", "prettier"],
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "plugins": ["prettier"],
   "env": {
     "es6": true,
@@ -25,18 +25,14 @@
     "no-unused-expressions": "off",
     "no-underscore-dangle": "off",
     "consistent-return": "off",
-    "prettier/prettier": [
-      "error",
-      {
-        "singleQuote": true,
-        "trailingComma": "all"
-      }
-    ],
     "import/no-useless-path-segments": "warn",
-    "prefer-destructuring": ["warn", {
-      "array": false,
-      "object": true
-    }]
+    "prefer-destructuring": [
+      "warn",
+      {
+        "array": false,
+        "object": true
+      }
+    ]
   },
   "overrides": [
     {
