transplite tests for higher target

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "start": "run-p js:watch css:watch",
     "build": "run-p js:build css:build",
     "lint": "eslint src/scripts",
-    "coverage": "nyc --reporter=lcov --reporter=text --reporter=text-summary mocha",
+    "coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text --reporter=text-summary mocha",
     "bundlesize": "bundlesize",
     "cypress:run": "$(npm bin)/cypress run",
     "cypress:open": "$(npm bin)/cypress open",
     "cypress:ci": "cypress run --record --group --ci-build-id $GITHUB_SHA",
     "test": "run-s test:unit test:e2e",
-    "test:unit": "mocha",
-    "test:unit:watch": "mocha --watch --inspect=5556",
+    "test:unit": "NODE_ENV=test mocha",
+    "test:unit:watch": "NODE_ENV=test mocha --watch --inspect=5556",
     "test:e2e": "run-p --race start cypress:run",
     "js:watch": "NODE_ENV=development node server.js",
     "js:build": "webpack --config webpack.config.prod.js",
