--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cypress:open": "$(npm bin)/cypress open",
     "cypress:ci": "cypress run --record --group --ci-build-id $GITHUB_SHA",
     "test": "run-s test:unit test:e2e",
-    "test:unit": "mocha",
+    "test:unit": "NODE_ENV=test mocha",
     "test:unit:watch": "mocha --watch --inspect=5556",
     "test:e2e": "run-p --race start cypress:run",
     "js:watch": "NODE_ENV=development node server.js",
