make buildAndWatch default build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,10 @@
       "type": "npm",
       "label": "buildAndWatch",
       "script": "js:watch",
-      "group": "build",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
       "isBackground": true,
       "presentation": {
         "echo": true,
