--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,13 @@
     "public/assets": true,
     "**/coverage": true
   },
+  // Mocha Sidebar settings
+  "mocha.env": {
+    "NODE_ENV": "test"
+  },
+  "mocha.files.glob": "src/scripts/**/*.test.js",
+  "mocha.requires": ["@babel/register", "./config/jsdom.js"],
+
   // for Windows collaborators
   "files.eol": "\n",
   "files.encoding": "utf8",
