--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-loader": "^3.0.2",
+    "eslint-plugin-compat": "3.3.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
