--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "nyc": "^14.1.1",
     "postcss-cli": "^6.1.3",
     "prettier": "^1.18.2",
+    "selenium-webdriver": "4.0.0-alpha.5",
     "sinon": "^7.5.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
