try to install geskodriver

--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -43,6 +43,20 @@ jobs:
         with:
           node-version: '12.x'
       - run: npm ci
+        env:
+          CYPRESS_INSTALL_BINARY: 0
+          HUSKY_SKIP_INSTALL: true
+
+      # install drivers
+      # geskodriver - https://github.com/mozilla/geckodriver/releases/
+      - name: Install Firefox driver on Ubuntu
+        if: matrix.browser == 'firefox'
+        run: |
+          wget https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
+          sudo sh -c 'tar -x geckodriver -zf geckodriver-v0.26.0-linux64.tar.gz -O > /usr/bin/geckodriver'
+          sudo chmod +x /usr/bin/geckodriver
+          rm geckodriver-v0.26.0-linux64.tar.gz
+
       - run: npm i selenium-webdriver pixelmatch pngjs
       - run: node .github/actions-scripts/selenium.js
         env:
