--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -51,19 +51,15 @@ jobs:
       # install drivers
       - name: Enable Safari Driver
         run: |
-          sudo defaults write com.apple.Safari IncludeDevelopMenu 1
           sudo safaridriver --enable
-          sudo defaults write com.apple.Safari AllowRemoteAutomation 1
+          safaridriver -p 0 &
         if: matrix.browser == 'safari'
 
-      # geskodriver - https://github.com/mozilla/geckodriver/releases/
-      - name: Install Firefox driver on Ubuntu
-        if: matrix.browser == 'firefox' && matrix.os == 'ubuntu-latest'
-        run: |
-          wget https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
-          sudo sh -c 'tar -x geckodriver -zf geckodriver-v0.26.0-linux64.tar.gz -O > /usr/bin/geckodriver'
-          sudo chmod +x /usr/bin/geckodriver
-          rm geckodriver-v0.26.0-linux64.tar.gz
+      - run: npm i geckodriver
+        if: matrix.browser === 'firefox'
+
+      - run: npm i chromedriver
+        if: matrix.browser === 'chrome'
 
       - run: npm i selenium-webdriver pixelmatch pngjs
       - run: node .github/actions-scripts/selenium.js
