--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -12,14 +12,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [windows-latest, macOS-latest]
         browser: [ie, MicrosoftEdge, safari, firefox]
         exclude:
           # On Windows, run tests with only IE and Edge
           - os: windows-latest
             browser: safari
-          - os: windows-latest
-            browser: firefox
           # On macOS, run tests with only the latest environments.
           - os: macOS-latest
             browser: ie
