--- a/.github/workflows/browsers.yml
+++ b/.github/workflows/browsers.yml
@@ -23,8 +23,6 @@ jobs:
             browser: ie
           - os: macOS-10.14
             browser: MicrosoftEdge
-          - os: macOS-10.14
-            browser: firefox
           # Linux - just firefox
           - os: ubuntu-latest
             browser: ie
@@ -63,10 +61,14 @@ jobs:
         if: matrix.browser == 'safari'
 
       # https://github.com/mozilla/geckodriver/releases
-      - run: npm i geckodriver
-        if: matrix.browser == 'firefox'
+      - run: |
+          npm i geckodriver
+          echo "::add-path::${{ github.workspace }}\\node_modules\\geckodriver\\bin\\"
+        if: matrix.browser == 'firefox' && matrix.os == 'windows-latest'
         env:
           GECKODRIVER_VERSION: '0.26.0'
+      - run: brew install geckodriver
+        if: matrix.browser == 'firefox' && matrix.os == 'macOS-10.14'
 
       - run: npm i chromedriver --chromedriver_version=LATEST
         if: matrix.browser == 'chrome'
@@ -76,9 +78,10 @@ jobs:
           echo "::add-path::${{ github.workspace }}\\Selenium.WebDriver.IEDriver.3.150.1\\driver\\"
         if: matrix.browser == 'ie'
 
-      - run: |
-          nuget install Selenium.WebDriver.MicrosoftDriver -Version 17.17134.0
-          echo "::add-path::${{ github.workspace }}\\Selenium.WebDriver.MicrosoftDriver.17.17134.0\\driver\\"
+      # - run: |
+      #     nuget install Selenium.WebDriver.MicrosoftDriver -Version 17.17134.0
+      #     echo "::add-path::${{ github.workspace }}\\Selenium.WebDriver.MicrosoftDriver.17.17134.0\\driver\\"
+      - run: DISM.exe /Online /Add-Capability /CapabilityName:Microsoft.WebDriver~~~~0.0.1.0
         if: matrix.browser == 'MicrosoftEdge'
 
       - run: npm i selenium-webdriver pixelmatch pngjs
